--- a/Unreal/Translate_3C/Config/DefaultEngine.ini
+++ b/Unreal/Translate_3C/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/main.main
+EditorStartupMap=/Game/main.main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
