--- a/Unreal/Translate_3C/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/Translate_3C/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -112,7 +112,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/main
 
 [ModuleFileTracking]
-Translate_3C.TimeStamp=2023.11.09-15.50.56
+Translate_3C.TimeStamp=2023.11.10-11.11.03
 Translate_3C.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.07.27-10.49.22
 StorageServerClient.LastCompileMethod=Unknown
@@ -1176,12 +1176,23 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+EditorStyleSettings="\"Object.Graphs.GraphBackgroundBrush\" \"Object.Graphs.GraphBackgroundBrush.TintColor\" \"Object.Graphs.GraphBackgroundBrush.OutlineSettings.Color\" "
+LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" "
+PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
+SequencerSettings="\"Object.General.SectionColorTints\" "
+BlueprintHeaderViewSettings="\"Object.Settings.Settings|Style\" "
+DeveloperSettings=
+FractureModeCustomizationSettings="\"Object.Fracture Mode.Fracture Mode|UI Customization\" "
+ModelingToolsModeCustomizationSettings="\"Object.Modeling Mode.Modeling Mode|UI Customization\" "
+AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" "
 
 [DetailCategories]
 EditorStyleSettings.Theme=True
@@ -1556,10 +1567,380 @@ CameraFollow.HLOD=True
 CameraFollow.Networking=True
 CameraFollow.WorldPartition=True
 CameraFollow.Actor=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Gameplay Tags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Advanced Copy=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.EQS=True
+AISystem.Blackboard=True
+AISystem.Behavior Tree=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AnimationSettings.AnimationAttributes=True
+AnimationSettings.Mirroring=True
+AnimationSettings.AnimationData=True
+AnimationModifierSettings.Modifiers=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+AudioSettings.Debug=True
+ChaosSolverSettings.GameInstance=True
+CineCameraSettings.Lens=True
+CineCameraSettings.Filmback=True
+CineCameraSettings.Crop=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+ControlRigSettings.Shapes=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DataDrivenConsoleVariableSettings.DataDrivenCVar=True
+DebugCameraControllerSettings.General=True
+EnhancedInputDeveloperSettings.Enhanced Input=True
+InputModifierDeadZone.Settings=True
+InputModifierResponseCurveExponential.Settings=True
+InputModifierFOVScaling.Settings=True
+EnhancedInputDeveloperSettings.Modifier Default Values=True
+InputTriggerDown.Trigger Settings=True
+InputTriggerPressed.Trigger Settings=True
+InputTriggerReleased.Trigger Settings=True
+InputTriggerHold.Trigger Settings=True
+InputTriggerHoldAndRelease.Trigger Settings=True
+InputTriggerTap.Trigger Settings=True
+InputTriggerPulse.Trigger Settings=True
+EnhancedInputDeveloperSettings.Trigger Default Values=True
+EnhancedInputEditorProjectSettings.Default=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+GarbageCollectionSettings.Debug=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.Platforms=True
+InputSettings.ViewportProperties=True
+InputSettings.Input=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.DefaultClasses=True
+InputSettings.Console=True
+InterchangeProjectSettings.ImportContent=True
+InterchangeProjectSettings.ImportIntoLevel=True
+InterchangeProjectSettings.EditorInterface=True
+InterchangeProjectSettings.Generic=True
+InterchangeProjectSettings.Editor Generic Pipeline Class=True
+LandscapeSettings.Layers=True
+LandscapeSettings.Configuration=True
+LandscapeSettings.Materials=True
+LevelSequenceProjectSettings.Timeline=True
+MeshBudgetProjectSettings.StaticMesh=True
+MetaSoundSettings.AutoUpdate=True
+MetaSoundSettings.Registration=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+RecastNavMesh.HLOD=True
+RecastNavMesh.Physics=True
+RecastNavMesh.Networking=True
+RecastNavMesh.WorldPartition=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.WorkingColorSpace=True
+RendererSettings.GlobalIllumination=True
+RendererSettings.Reflections=True
+RendererSettings.Lumen=True
+RendererSettings.Shadows=True
+RendererSettings.HardwareRayTracing=True
+RendererSettings.SoftwareRayTracing=True
+RendererSettings.Nanite=True
+RendererSettings.MiscLighting=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Translucency=True
+RendererSettings.VR=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.Substrate=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TextureEncodingProjectSettings.EncodeSpeedSettings=True
+TextureEncodingProjectSettings.EncodeSpeeds=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+WorldPartitionEditorSettings.MapConversion=True
+WorldPartitionEditorSettings.Foliage=True
+WorldPartitionEditorSettings.MiniMap=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+EditorProjectAppearanceSettings.ReferenceViewer=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+BlueprintEditorProjectSettings.Experimental=True
+BlueprintEditorProjectSettings.Play=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+DDCProjectSettings.Warnings=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+EditorPerformanceProjectSettings.ViewportResolution=True
+SourceControlPreferences.SourceControl=True
+SkeletalMeshSimplificationSettings.General=True
+PlasticSourceControlProjectSettings.Plastic SCM=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+TextureImportSettings.ImportSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+AndroidRuntimeSettings.Misc=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HoloLensTargetSettings.OS Info=True
+HoloLensTargetSettings.HoloLens=True
+HoloLensTargetSettings.Packaging=True
+HoloLensTargetSettings.Toolchain=True
+HoloLensTargetSettings.App Installer=True
+HoloLensTargetSettings.Capabilities=True
+HoloLensTargetSettings.Rendering=True
+HoloLensTargetSettings.Audio=True
+HoloLensTargetSettings.Spatial Mapping=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.RequiredIOSIcons=True
+IOSRuntimeSettings.OptionalIOSIcons=True
+IOSRuntimeSettings.RequiredTVOSAssets=True
+IOSRuntimeSettings.OptionalTVOSAssets=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Misc=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+WindowsTargetSettings.D3D12 Targeted Shader Formats=True
+WindowsTargetSettings.D3D11 Targeted Shader Formats=True
+WindowsTargetSettings.Vulkan Targeted Shader Formats=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AndroidFileServerRuntimeSettings.Packaging=True
+AndroidFileServerRuntimeSettings.Deployment=True
+AndroidFileServerRuntimeSettings.Connection=True
+AvfMediaSettings.Debug=True
+DataflowSettings.PinColors=True
+DataflowSettings.NodeColors=True
+FractureModeSettings.Fracture Mode=True
+GeometryCacheStreamerSettings.Geometry Cache Streamer=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+ModelingToolsEditorModeSettings.Modeling Mode=True
+ModelingComponentsSettings.Modeling Tools=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Viewport=True
+NiagaraSettings.SimulationCaching=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraSettings.LightRenderer=True
+NiagaraSettings.SkeletalMeshDI=True
+NiagaraSettings.StaticMeshDI=True
+NiagaraSettings.AsyncGpuTraceDI=True
+NiagaraSettings.SimCache=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+NiagaraEditorSettings.Niagara Colors=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+PythonScriptPluginSettings.Python=True
+PythonScriptPluginSettings.PythonRemoteExecution=True
+RenderDocPluginSettings.Frame Capture Settings=True
+RenderDocPluginSettings.Advanced Settings=True
+ResonanceAudioSettings.Reverb=True
+ResonanceAudioSettings.General=True
+TakeRecorderProjectSettings.Take Recorder=True
+TakeRecorderProjectSettings.Movie Scene Take Settings=True
+TakeRecorderProjectSettings.Microphone Audio Recorder=True
+TakeRecorderProjectSettings.Animation Recorder=True
+TakeRecorderProjectSettings.World Recorder=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Availability=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+CameraFollowSettings.settings=True
+CameraOrbitSettings.Settings=True
+CameraOrbit.TransformCommon=True
+CameraOrbit.CameraSettings=False
+CameraOrbit.CameraOptions=False
+CameraOrbit.CameraMovements=True
+CameraOrbit.Debug=False
+CameraOrbit.AutoPlayerActivation=True
+CameraOrbit.Camera=True
+CameraOrbit.PostProcess=True
+CameraOrbit.Physics=True
+CameraOrbit.Tags=True
+CameraOrbit.AssetUserData=True
+CameraOrbit.Activation=True
+CameraOrbit.Collision=True
+CameraOrbit.Cooking=True
+CameraOrbit.Replication=True
+CameraOrbit.HLOD=True
+CameraOrbit.Networking=True
+CameraOrbit.WorldPartition=True
+CameraOrbit.Actor=True
+CameraOrbitSettings.CameraOrbitSettings=True
+TransformToolOptions.ToolOptions=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
 LiveCodingSettings=True
+GeneralProjectSettings=True
+GameMapsSettings=True
+BlueprintEditorSettings=True
+EnhancedInputEditorSettings=True
+EditorExperimentalSettings=True
+EditorSettings=True
+EditorKeyboardShortcutSettings=True
+EditorLoadingSavingSettings=True
+EditorPerProjectUserSettings=True
+OutputLogSettings=True
+InternationalizationSettingsModel=True
+VRModeSettings=True
+LevelEditorMiscSettings=True
+LevelEditorPlaySettings=True
+OnlinePIESettings=True
+LevelEditorViewportSettings=True
+PersonaOptions=True
+ContentBrowserSettings=True
+ControlRigEditorSettings=True
+CurveEditorSettings=True
+SequencerSettings=True
+FlipbookEditorSettings=True
+GraphEditorSettings=True
+LevelInstanceEditorPerProjectUserSettings=True
+MetasoundEditorSettings=True
+SkeletalMeshEditorSettings=True
+SpriteEditorSettings=True
+TakeRecorderUserSettings=True
+TileMapEditorSettings=True
+TileSetEditorSettings=True
+WidgetDesignerSettings=True
+BlueprintHeaderViewSettings=True
+FractureModeCustomizationSettings=True
+ModelingToolsModeCustomizationSettings=True
+PythonScriptPluginUserSettings=True
+AutomationTestSettings=True
+CrashReporterSettings=True
+GameplayTagsDeveloperSettings=True
+LogVisualizerSettings=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1575,12 +1956,17 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/main.main", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [PlacementMode]
+RecentlyPlaced=/Script/Translate_3C.CameraOrbit;
 RecentlyPlaced=/Script/Translate_3C.CameraFollow;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Translate_3C.CameraMovements;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/main
+MRUItem0=/Game/Expression/RotationExpr
+MRUItem1=/Game/DataAsset/CameraOrbit/settingsOrbit
+MRUItem2=/Game/DataAsset/CameraFollow/FollowSettings
+MRUItem3=/Game/DataAsset/CameraFollow/FollowSettings2
+MRUItem4=/Game/main
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1672,4 +2058,41 @@ Project=C:/Program Files/Epic Games/UE_5.2/
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+LoadLevelAtStartup=LastOpened
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
+
+[AssetEditorToolkitTabLocation]
+/Game/DataAsset/CameraFollow/FollowSettings.FollowSettings=1
+/Game/DataAsset/CameraFollow/FollowSettings2.FollowSettings2=1
+/Game/DataAsset/CameraOrbit/settingsOrbit.settingsOrbit=1
+/Game/Expression/RotationExpr.RotationExpr=1
+
+[/Script/CurveEditor.CurveEditorSettings]
+bAutoFrameCurveEditor=True
+FrameInputPadding=50
+FrameOutputPadding=50
+bShowBufferedCurves=True
+bShowCurveEditorCurveToolTips=True
+TangentVisibility=SelectedKeys
+ZoomPosition=CurrentTime
+bSnapTimeToSelection=False
+SelectionColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+ParentSpaceCustomColor=(R=0.930000,G=0.310000,B=0.190000,A=1.000000)
+WorldSpaceCustomColor=(R=0.198000,G=0.610000,B=0.558000,A=1.000000)
+TreeViewWidth=0.171059
 
