--- a/Unity/WorldInteraction/Assembly-CSharp.csproj
+++ b/Unity/WorldInteraction/Assembly-CSharp.csproj
@@ -59,7 +59,18 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\Manager\Singleton.cs" />
+    <Compile Include="Assets\Script\Player\Path.cs" />
+    <Compile Include="Assets\Script\Player\Node.cs" />
+    <Compile Include="Assets\Script\Camera\TriggerZone.cs" />
+    <Compile Include="Assets\Script\Camera\CameraFixed.cs" />
+    <Compile Include="Assets\Script\Camera\CameraSlider.cs" />
+    <Compile Include="Assets\Script\Camera\CameraBase.cs" />
     <Compile Include="Assets\Script\TriggerEvent.cs" />
+    <Compile Include="Assets\Script\Camera\CameraSurveillance.cs" />
+    <Compile Include="Assets\Script\Manager\CameraManaged.cs" />
+    <Compile Include="Assets\Script\Manager\CameraManager.cs" />
+    <Compile Include="Assets\Script\Player\Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
