--- a/Unreal/Interaction/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/Interaction/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,12 +160,19 @@ InputAction=
 StaticMeshComponent=StaticMeshComponent.Collision.Collision
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.BlendSamples_Samples
 StaticMeshActor=StaticMeshActor.Collision.Collision
+SkeletalMeshComponent=
+DiabloChar_Bp_C=SkeletalMeshComponent.Physics.ConstraintsGroup,DiabloChar_Bp_C.Settings.Global Illumination
+SceneComponent=StaticMeshActor.Collision.Collision
+Actor=StaticMeshActor.Collision.Collision
+VolumetricCloud=StaticMeshActor.Collision.Collision
+SpringArmComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,DiabloChar_Bp_C.Settings.Global Illumination,DiabloChar_Bp_C.Settings.Global Illumination
+CapsuleComponent=
 
 [EditorStartup]
-LastLevel=/Game/Map/PlayerMap
+LastLevel=/Game/Map/CorrMap
 
 [ModuleFileTracking]
-Interaction.TimeStamp=2023.11.28-15.40.02
+Interaction.TimeStamp=2023.11.29-10.33.52
 Interaction.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.07.27-10.49.22
 StorageServerClient.LastCompileMethod=Unknown
@@ -1275,10 +1282,10 @@ InputAction="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 SphereComponent="\"Object\" "
-PlayerDiablo_Bp_C="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-PlayerDiablo="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-Character="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-Pawn="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
+PlayerDiablo_Bp_C="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
+PlayerDiablo="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
+Character="\"Object\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
+Pawn="\"Object\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1409,6 +1416,12 @@ AnimBlueprint="\"Object\" "
 PlayerDiabloAnimInstance="\"Object\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StaticMeshActor=
+DiabloChar_Bp_C="\"Object\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
+DiabloCharacter="\"Object\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
+DiabloCharacter_Bp_C="\"Object\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
+AnimationGraph="\"Object\" "
+EdGraph="\"Object\" "
+DiabloCharAnim_Bp_C="\"Object\" \"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -2472,6 +2485,182 @@ Piece_Bp_C.HLOD=True
 Piece_Bp_C.Physics=True
 Piece_Bp_C.WorldPartition=True
 Piece_Bp_C.Events=True
+DiabloChar_Bp_C.TransformCommon=True
+DiabloChar_Bp_C.Animation=True
+DiabloChar_Bp_C.Mesh=True
+DiabloChar_Bp_C.Tick=False
+DiabloChar_Bp_C.ComponentTick=True
+DiabloChar_Bp_C.Clothing=True
+DiabloChar_Bp_C.LeaderPoseComponent=True
+DiabloChar_Bp_C.Physics=True
+DiabloChar_Bp_C.Collision=True
+DiabloChar_Bp_C.AnimationRig=True
+DiabloChar_Bp_C.Lighting=True
+DiabloChar_Bp_C.Deformer=True
+DiabloChar_Bp_C.SkinWeights=True
+DiabloChar_Bp_C.HLOD=True
+DiabloChar_Bp_C.Rendering=True
+DiabloChar_Bp_C.PathTracing=True
+DiabloChar_Bp_C.Mobile=True
+DiabloChar_Bp_C.Navigation=True
+DiabloChar_Bp_C.RayTracing=True
+DiabloChar_Bp_C.VirtualTexture=True
+DiabloChar_Bp_C.Tags=True
+DiabloChar_Bp_C.AssetUserData=True
+DiabloChar_Bp_C.Replication=True
+DiabloChar_Bp_C.ComponentReplication=True
+DiabloChar_Bp_C.Activation=True
+DiabloChar_Bp_C.Variable=True
+DiabloChar_Bp_C.Cooking=True
+DiabloChar_Bp_C.Character Movement (General Settings)=True
+DiabloChar_Bp_C.Character Movement: Walking=True
+DiabloChar_Bp_C.Character Movement: Jumping / Falling=True
+DiabloChar_Bp_C.Character Movement (Networking)=True
+DiabloChar_Bp_C.Character Movement: Swimming=True
+DiabloChar_Bp_C.Character Movement: Flying=True
+DiabloChar_Bp_C.Character Movement: Custom Movement=True
+DiabloChar_Bp_C.Character Movement (Rotation Settings)=True
+DiabloChar_Bp_C.Character Movement: Physics Interaction=True
+DiabloChar_Bp_C.Character Movement=True
+DiabloChar_Bp_C.Character Movement: Avoidance=True
+DiabloChar_Bp_C.RootMotion=True
+DiabloChar_Bp_C.Character Movement: NavMesh Movement=True
+DiabloChar_Bp_C.NavMovement=True
+DiabloChar_Bp_C.Velocity=True
+DiabloChar_Bp_C.PlanarMovement=True
+DiabloChar_Bp_C.MovementComponent=True
+DiabloChar_Bp_C.Shape=True
+DiabloChar_Bp_C.Character=True
+DiabloChar_Bp_C.Camera=True
+DiabloChar_Bp_C.Pawn=True
+DiabloChar_Bp_C.Actor=True
+DiabloChar_Bp_C.Input=True
+DiabloChar_Bp_C.WorldPartition=True
+DiabloChar_Bp_C.Events=True
+DiabloChar_Bp_C.Materials=True
+SkeletalMeshComponent.RayTracing=True
+Info.TransformCommon=True
+Info.Rendering=True
+Info.Physics=True
+Info.Networking=True
+Info.Actor=True
+DiabloChar_Bp_C.Settings=True
+DiabloChar_Bp_C.SkeletalMesh=True
+DiabloChar_Bp_C.Optimization=True
+DiabloChar_Bp_C.Networking=True
+DiabloCharacter_Bp_C.PlayerDiabloAnimInstance=True
+DiabloCharacter_Bp_C.RootMotion=True
+DiabloCharacter_Bp_C.Notifies=True
+DiabloCharacter_Bp_C.Montage=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+DiabloCharAnim_Bp_C.TransformCommon=True
+DiabloCharAnim_Bp_C.Animation=True
+DiabloCharAnim_Bp_C.Mesh=True
+DiabloCharAnim_Bp_C.Tick=True
+DiabloCharAnim_Bp_C.Settings=True
+DiabloCharAnim_Bp_C.ComponentTick=True
+DiabloCharAnim_Bp_C.Clothing=True
+DiabloCharAnim_Bp_C.Physics=True
+DiabloCharAnim_Bp_C.Collision=True
+DiabloCharAnim_Bp_C.LeaderPoseComponent=True
+DiabloCharAnim_Bp_C.Lighting=True
+DiabloCharAnim_Bp_C.AnimationRig=True
+DiabloCharAnim_Bp_C.Deformer=True
+DiabloCharAnim_Bp_C.SkinWeights=True
+DiabloCharAnim_Bp_C.Rendering=True
+DiabloCharAnim_Bp_C.HLOD=True
+DiabloCharAnim_Bp_C.PathTracing=True
+DiabloCharAnim_Bp_C.Mobile=True
+DiabloCharAnim_Bp_C.Navigation=True
+DiabloCharAnim_Bp_C.RayTracing=True
+DiabloCharAnim_Bp_C.VirtualTexture=True
+DiabloCharAnim_Bp_C.Tags=True
+DiabloCharAnim_Bp_C.AssetUserData=True
+DiabloCharAnim_Bp_C.Replication=True
+DiabloCharAnim_Bp_C.ComponentReplication=True
+DiabloCharAnim_Bp_C.Activation=True
+DiabloCharAnim_Bp_C.Variable=True
+DiabloCharAnim_Bp_C.Cooking=True
+DiabloCharAnim_Bp_C.Character Movement (General Settings)=True
+DiabloCharAnim_Bp_C.Character Movement: Walking=True
+DiabloCharAnim_Bp_C.Character Movement: Jumping / Falling=True
+DiabloCharAnim_Bp_C.Character Movement (Networking)=True
+DiabloCharAnim_Bp_C.Character Movement: Swimming=True
+DiabloCharAnim_Bp_C.Character Movement: Flying=True
+DiabloCharAnim_Bp_C.Character Movement: Custom Movement=True
+DiabloCharAnim_Bp_C.Character Movement (Rotation Settings)=True
+DiabloCharAnim_Bp_C.Character Movement: Physics Interaction=True
+DiabloCharAnim_Bp_C.Character Movement=True
+DiabloCharAnim_Bp_C.Character Movement: Avoidance=True
+DiabloCharAnim_Bp_C.RootMotion=True
+DiabloCharAnim_Bp_C.Character Movement: NavMesh Movement=True
+DiabloCharAnim_Bp_C.NavMovement=True
+DiabloCharAnim_Bp_C.Velocity=True
+DiabloCharAnim_Bp_C.PlanarMovement=True
+DiabloCharAnim_Bp_C.MovementComponent=True
+DiabloCharAnim_Bp_C.Shape=True
+DiabloCharAnim_Bp_C.Character=True
+DiabloCharAnim_Bp_C.Camera=True
+DiabloCharAnim_Bp_C.Pawn=True
+DiabloCharAnim_Bp_C.Actor=True
+DiabloCharAnim_Bp_C.Input=True
+DiabloCharAnim_Bp_C.WorldPartition=True
+DiabloCharAnim_Bp_C.Events=True
+DiabloCharAnim_Bp_C.Materials=True
+DiabloCharacter_Bp_C.TransformCommon=True
+DiabloCharacter_Bp_C.Animation=True
+DiabloCharacter_Bp_C.Mesh=True
+DiabloCharacter_Bp_C.Tick=True
+DiabloCharacter_Bp_C.Settings=True
+DiabloCharacter_Bp_C.ComponentTick=True
+DiabloCharacter_Bp_C.Clothing=True
+DiabloCharacter_Bp_C.Physics=True
+DiabloCharacter_Bp_C.Collision=True
+DiabloCharacter_Bp_C.LeaderPoseComponent=True
+DiabloCharacter_Bp_C.Lighting=True
+DiabloCharacter_Bp_C.AnimationRig=True
+DiabloCharacter_Bp_C.Deformer=True
+DiabloCharacter_Bp_C.SkinWeights=True
+DiabloCharacter_Bp_C.Rendering=True
+DiabloCharacter_Bp_C.HLOD=True
+DiabloCharacter_Bp_C.PathTracing=True
+DiabloCharacter_Bp_C.Mobile=True
+DiabloCharacter_Bp_C.Navigation=True
+DiabloCharacter_Bp_C.RayTracing=True
+DiabloCharacter_Bp_C.VirtualTexture=True
+DiabloCharacter_Bp_C.Tags=True
+DiabloCharacter_Bp_C.AssetUserData=True
+DiabloCharacter_Bp_C.Replication=True
+DiabloCharacter_Bp_C.ComponentReplication=True
+DiabloCharacter_Bp_C.Activation=True
+DiabloCharacter_Bp_C.Variable=True
+DiabloCharacter_Bp_C.Cooking=True
+DiabloCharacter_Bp_C.Character Movement (General Settings)=True
+DiabloCharacter_Bp_C.Character Movement: Walking=True
+DiabloCharacter_Bp_C.Character Movement: Jumping / Falling=True
+DiabloCharacter_Bp_C.Character Movement (Networking)=True
+DiabloCharacter_Bp_C.Character Movement: Swimming=True
+DiabloCharacter_Bp_C.Character Movement: Flying=True
+DiabloCharacter_Bp_C.Character Movement: Custom Movement=True
+DiabloCharacter_Bp_C.Character Movement (Rotation Settings)=True
+DiabloCharacter_Bp_C.Character Movement: Physics Interaction=True
+DiabloCharacter_Bp_C.Character Movement=True
+DiabloCharacter_Bp_C.Character Movement: Avoidance=True
+DiabloCharacter_Bp_C.Character Movement: NavMesh Movement=True
+DiabloCharacter_Bp_C.NavMovement=True
+DiabloCharacter_Bp_C.Velocity=True
+DiabloCharacter_Bp_C.PlanarMovement=True
+DiabloCharacter_Bp_C.MovementComponent=True
+DiabloCharacter_Bp_C.Shape=True
+DiabloCharacter_Bp_C.Character=True
+DiabloCharacter_Bp_C.Camera=True
+DiabloCharacter_Bp_C.Pawn=True
+DiabloCharacter_Bp_C.Actor=True
+DiabloCharacter_Bp_C.Input=True
+DiabloCharacter_Bp_C.WorldPartition=True
+DiabloCharacter_Bp_C.Events=True
+DiabloCharacter_Bp_C.Materials=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2502,7 +2691,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprint
+ContentBrowserTab1.SelectedPaths=/Game/Blueprint/Correction
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2541,7 +2730,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [RootWindow]
-ScreenPosition=X=-1555.000 Y=44.000
+ScreenPosition=X=365.000 Y=44.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2581,10 +2770,11 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [MRU]
-MRUItem0=/Game/Map/PlayerMap
-MRUItem1=/Game/Arena/Maps/Demonstration
-MRUItem2=/Game/Map/MainMap
-MRUItem3=/Game/MainMap
+MRUItem0=/Game/Map/CorrMap
+MRUItem1=/Game/Map/PlayerMap
+MRUItem2=/Game/Arena/Maps/Demonstration
+MRUItem3=/Game/Map/MainMap
+MRUItem4=/Game/MainMap
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
@@ -2614,6 +2804,7 @@ CollisionProfile=True
 EnhancedInputDeveloperSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprint/Correction/DiabloChar_Bp.DiabloChar_Bp;
 RecentlyPlaced=/Game/Blueprint/Treasure_Bp.Treasure_Bp;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprint/Obstacle.Obstacle;
@@ -2622,19 +2813,23 @@ RecentlyPlaced=/Game/Blueprint/PlayerDiablo_Bp.PlayerDiablo_Bp;
 RecentlyPlaced=/Script/Interaction.Projection;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/PlayerDiablo_Bp
-MRUItem1=/Game/Blueprint/Treasure_Bp
-MRUItem2=/Game/Blueprint/Piece_Bp
-MRUItem3=/Game/Map/PlayerMap
-MRUItem4=/Game/Arena/Maps/Demonstration
-MRUItem5=/Game/Mesh/Animation/PlayerBlendSpace_Bp
-MRUItem6=/Game/Mesh/Animation/PlayerDiabloAnim_Bp
-MRUItem7=/Game/Mesh/Animation/Idle_mixamo_com
-MRUItem8=/Game/Input/PlayerInputMappingContext
-MRUItem9=/Game/Input/MouseClick
-MRUItem10=/Game/Blueprint/Obstacle
-MRUItem11=/Game/MainMap
-MRUItem12=/Game/GameModeCustom
+MRUItem0=/Game/Blueprint/Correction/DiabloCharacter_Bp
+MRUItem1=/Game/Blueprint/Correction/DiabloCharAnim_Bp
+MRUItem2=/Game/Blueprint/Correction/DiabloChar_Bp
+MRUItem3=/Game/Mesh/Animation/DiabloCharacter_Bp
+MRUItem4=/Game/Mesh/Animation/PlayerDiabloAnim_Bp
+MRUItem5=/Game/Input/MouseClick
+MRUItem6=/Game/Input/PlayerInputMappingContext
+MRUItem7=/Game/Blueprint/PlayerDiablo_Bp
+MRUItem8=/Game/Blueprint/Treasure_Bp
+MRUItem9=/Game/Blueprint/Piece_Bp
+MRUItem10=/Game/Map/PlayerMap
+MRUItem11=/Game/Arena/Maps/Demonstration
+MRUItem12=/Game/Mesh/Animation/PlayerBlendSpace_Bp
+MRUItem13=/Game/Mesh/Animation/Idle_mixamo_com
+MRUItem14=/Game/Blueprint/Obstacle
+MRUItem15=/Game/MainMap
+MRUItem16=/Game/GameModeCustom
 
 [AssetEditorToolkitTabLocation]
 /Game/GameModeCustom.GameModeCustom=1
@@ -2646,11 +2841,15 @@ MRUItem12=/Game/GameModeCustom
 /Game/Mesh/Animation/PlayerBlendSpace_Bp.PlayerBlendSpace_Bp=1
 /Game/Blueprint/Treasure_Bp.Treasure_Bp=1
 /Game/Blueprint/Piece_Bp.Piece_Bp=1
+/Game/Blueprint/Correction/DiabloChar_Bp.DiabloChar_Bp=1
+/Game/Mesh/Animation/DiabloCharacter_Bp.DiabloCharacter_Bp=1
+/Game/Blueprint/Correction/DiabloCharacter_Bp.DiabloCharacter_Bp=1
+/Game/Blueprint/Correction/DiabloCharAnim_Bp.DiabloCharAnim_Bp=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
 bShowGraphInstructionText=True
-bHideUnrelatedNodes=False
+bHideUnrelatedNodes=True
 bShowShortTooltips=True
 bEnableInputTriggerSupportWarnings=False
 bSplitContextTargetSettings=True
@@ -2860,7 +3059,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
-bHideUnrelatedNodes=False
+bHideUnrelatedNodes=True
 
 [DetailCategoriesAdvanced]
 CameraComponent.ComponentTick=True
