--- a/Unity/Outils/Assembly-CSharp-Editor.csproj
+++ b/Unity/Outils/Assembly-CSharp-Editor.csproj
@@ -59,7 +59,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\EditorUtils\Editor\GUIStyleUtils.cs" />
+    <Compile Include="Assets\EditorUtils\Editor\ButtonUtils.cs" />
     <Compile Include="Assets\Tools\Editor\ExampleComponentEditor.cs" />
+    <Compile Include="Assets\EditorUtils\Editor\Padding2D.cs" />
     <Compile Include="Assets\Tools\TextureGenerator\Editor\TextureGeneratorEditor.cs" />
   </ItemGroup>
   <ItemGroup>
