--- a/Unreal/Revision/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/Revision/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -218,7 +218,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Scene/MainMap
 
 [ModuleFileTracking]
-Revision.TimeStamp=2023.12.15-15.38.36
+Revision.TimeStamp=2023.12.16-15.46.17
 Revision.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.07.27-10.49.22
 StorageServerClient.LastCompileMethod=Unknown
@@ -1498,15 +1498,18 @@ Pawn="\"Object.Parameter.channel\" "
 BaseUserWidget_Bp_C="\"Object\" "
 BaseUserWidget="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.WidgetStyle\" "
+Visual="\"Object\" \"Object.Appearance.WidgetStyle\" "
 Widget_Bp_C="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
-Button="\"Object\" "
-ContentWidget="\"Object\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" "
+GameOverWidget_Bp_C="\"Object\" "
+GameOverWidget="\"Object\" "
+Border="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1553,7 +1556,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Classes_Game/Revision
+ContentBrowserTab1.SelectedPaths=/Game/Blueprint
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2782,7 +2785,7 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
-TextBlock.Layout=True
+TextBlock.Layout=False
 TextBlock.Content=True
 TextBlock.Appearance=True
 TextBlock.Accessibility=True
@@ -2805,6 +2808,29 @@ Button.Navigation=True
 Button.Localization=True
 Button.Events=True
 PlayerHUD_Bp_C.PlayerHUD=True
+RevisionGameModeBase_Bp_C.RevisionGameModeBase=True
+GameOverWidget_Bp_C.Appearance=True
+GameOverWidget_Bp_C.Input=True
+GameOverWidget_Bp_C.Accessibility=True
+GameOverWidget_Bp_C.Interaction=True
+GameOverWidget_Bp_C.Designer=True
+GameOverWidget_Bp_C.Performance=True
+GameOverWidget_Bp_C.Behavior=True
+GameOverWidget_Bp_C.Render Transform=True
+GameOverWidget_Bp_C.Clipping=True
+GameOverWidget_Bp_C.Navigation=True
+GameOverWidget_Bp_C.Localization=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2922,26 +2948,26 @@ bConvertSceneUnit=False
 LastLogListing=AssetCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Material/ChangeMat
-MRUItem1=/Game/Blueprint/Widget_Bp
-MRUItem2=/Game/Blueprint/PlayerBlendSpace
-MRUItem3=/Game/Assets/Animation/Walking_Back
-MRUItem4=/Game/Blueprint/PlayerAnimation_Bp
-MRUItem5=/Game/Blueprint/PlayerHUD_Bp
-MRUItem6=/Game/Blueprint/BaseUserWidget_Bp
-MRUItem7=/Game/Blueprint/Player_Bp
-MRUItem8=/Game/Blueprint/Code_Bp
-MRUItem9=/Game/Inputs/InputsMap
-MRUItem10=/Game/Inputs/ChangeView
-MRUItem11=/Game/Blueprint/LogicDigicode_Bp
-MRUItem12=/Game/Blueprint/Pad_Bp
-MRUItem13=/Game/Blueprint/Lamp_Bp
-MRUItem14=/Game/Blueprint/NewBlueprint
-MRUItem15=/Game/Assets/Material/Grey
-MRUItem16=/Game/Assets/Material/Black
-MRUItem17=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem18=/Game/Inputs/Rotation
-MRUItem19=/Game/Assets/Jumping_mixamo_com
+MRUItem0=/Game/Blueprint/GameOverWidget_Bp
+MRUItem1=/Game/Blueprint/RevisionGameModeBase_Bp
+MRUItem2=/Game/Blueprint/PlayerHUD_Bp
+MRUItem3=/Game/Assets/Material/ChangeMat
+MRUItem4=/Game/Blueprint/Widget_Bp
+MRUItem5=/Game/Blueprint/PlayerBlendSpace
+MRUItem6=/Game/Assets/Animation/Walking_Back
+MRUItem7=/Game/Blueprint/PlayerAnimation_Bp
+MRUItem8=/Game/Blueprint/BaseUserWidget_Bp
+MRUItem9=/Game/Blueprint/Player_Bp
+MRUItem10=/Game/Blueprint/Code_Bp
+MRUItem11=/Game/Inputs/InputsMap
+MRUItem12=/Game/Inputs/ChangeView
+MRUItem13=/Game/Blueprint/LogicDigicode_Bp
+MRUItem14=/Game/Blueprint/Pad_Bp
+MRUItem15=/Game/Blueprint/Lamp_Bp
+MRUItem16=/Game/Blueprint/NewBlueprint
+MRUItem17=/Game/Assets/Material/Grey
+MRUItem18=/Game/Assets/Material/Black
+MRUItem19=/Engine/BasicShapes/BasicShapeMaterial
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2991,6 +3017,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/Blueprint/BaseUserWidget_Bp.BaseUserWidget_Bp=1
 /Game/Blueprint/Widget_Bp.Widget_Bp=1
 /Game/Assets/Animation/Walking_Back.Walking_Back=1
+/Game/Blueprint/GameOverWidget_Bp.GameOverWidget_Bp=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3044,6 +3071,7 @@ Warning_ReparentTitle=False
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprint/Player_Bp.Player_Bp;
@@ -3125,6 +3153,8 @@ BlendSpace.Animation=False
 AnimSequence.Animation=True
 TextBlock.Appearance=False
 Button.Interaction=False
+TextBlock.Performance=False
+TextBlock.Accessibility=False
 
 [MaterialEditor]
 PrimType=1
@@ -3291,7 +3321,7 @@ bMaterialQualityUsed[3]=0
 Audio=False
 Editor=False
 Input=False
-Lists=False
+Lists=True
 Misc=False
 Optimization=False
 Panel=False
