--- a/Unity/AI_FSM/Assembly-CSharp.csproj
+++ b/Unity/AI_FSM/Assembly-CSharp.csproj
@@ -9,7 +9,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{8F7D9E6B-F786-4031-76ED-BB258C96F735}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -64,6 +65,7 @@
     <Compile Include="Assets\Script\State\IdleState.cs" />
     <Compile Include="Assets\Script\Transition.cs" />
     <Compile Include="Assets\Script\FSM.cs" />
+    <Compile Include="Assets\Script\Transition\WaitTransition.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -758,6 +760,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Script\Transition\WaitTransition.cs.meta" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
