--- a/Unity/AI_FSM/Assembly-CSharp.csproj
+++ b/Unity/AI_FSM/Assembly-CSharp.csproj
@@ -9,8 +9,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{8F7D9E6B-F786-4031-76ED-BB258C96F735}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -60,12 +59,12 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\Transition\WaitTransition.cs" />
     <Compile Include="Assets\Script\State.cs" />
     <Compile Include="Assets\Script\FSMComponent.cs" />
     <Compile Include="Assets\Script\State\IdleState.cs" />
     <Compile Include="Assets\Script\Transition.cs" />
     <Compile Include="Assets\Script\FSM.cs" />
-    <Compile Include="Assets\Script\Transition\WaitTransition.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -760,7 +759,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Script\Transition\WaitTransition.cs.meta" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
