--- a/Quake/Binaries/Quake.vcxproj.filters
+++ b/Quake/Binaries/Quake.vcxproj.filters
@@ -1,78 +1,78 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Main.cpp" />
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\AActor.cpp">
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Main.cpp" />
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\AActor.cpp">
       <Filter>Runtime</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\Core\Containers\FString.cpp">
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\FString.cpp">
       <Filter>Runtime\Core\Containers</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\GarbageCollector.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\TSharedPtr.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\TWeakPtr.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\UActorComponent.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\UGameInstance.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\RAUL2903\Desktop\Quake\Source\UObject.cpp" />
-    <ClCompile Include="TArray.cpp">
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\TArray.cpp">
       <Filter>Runtime\Core\Containers</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\GarbageCollector.cpp">
+      <Filter>Runtime</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TSharedPtr.cpp">
+      <Filter>Runtime</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TWeakPtr.cpp">
+      <Filter>Runtime</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UActorComponent.cpp">
+      <Filter>Runtime</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UGameInstance.cpp">
+      <Filter>Runtime</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\UObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Editor\Macro.h">
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Editor\Macro.h">
       <Filter>Editor</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\AActor.h">
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\AActor.h">
       <Filter>Runtime</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\Core\Containers\FString.h">
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\FString.h">
       <Filter>Runtime\Core\Containers</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\GarbageCollector.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\TSharedPtr.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\TWeakPtr.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\UActorComponent.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\Runtime\UGameInstance.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\RAUL2903\Desktop\Quake\Source\UObject.h" />
-    <ClInclude Include="TArray.h">
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\TArray.h">
       <Filter>Runtime\Core\Containers</Filter>
     </ClInclude>
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\GarbageCollector.h">
+      <Filter>Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TSharedPtr.h">
+      <Filter>Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TWeakPtr.h">
+      <Filter>Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UActorComponent.h">
+      <Filter>Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UGameInstance.h">
+      <Filter>Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\UObject.h" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="C:\Users\RAUL2903\Desktop\Quake\CMakeLists.txt" />
+    <CustomBuild Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Editor">
-      <UniqueIdentifier>{85B460BB-89EF-3D18-BCFD-B5CA58272A56}</UniqueIdentifier>
+      <UniqueIdentifier>{E6883661-7A7C-33BE-807F-C6F56D20839D}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime">
-      <UniqueIdentifier>{1CCCE768-C4DC-3D3E-9B36-F4DFAFAC3C9A}</UniqueIdentifier>
+      <UniqueIdentifier>{F6E5735C-1519-3C21-B738-44B8A2015A0F}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime\Core">
-      <UniqueIdentifier>{2EB01823-D450-38AF-B191-81746AFC7F30}</UniqueIdentifier>
+      <UniqueIdentifier>{3E8EA0D5-FD5A-3B4C-977D-306285DEF39C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime\Core\Containers">
-      <UniqueIdentifier>{776C8381-B48C-3914-826C-B403969FB120}</UniqueIdentifier>
+      <UniqueIdentifier>{870F1BAB-0DE4-3013-B9BE-2190DD2470A8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
